Get release notes ready

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -669,11 +669,6 @@
           </ul>
         </div>
       </li>
-      <li>
-        <div>
-          <em>TODO</em>
-        </div>
-      </li>
     </ul>
   </div>
   <div id="version_1_66_0.compilers_tested">
@@ -1031,7 +1026,8 @@
   <div id="version_1_66_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
