--- a/users/history/version_1_66_0.html
+++ b/users/history/version_1_66_0.html
@@ -44,6 +44,11 @@
               <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.66.0.beta.1/source/boost_1_66_0_b1.tar.bz2">boost_1_66_0_b1.tar.bz2</a></td><td>5d0405eb73bd609ebcd54bbc96d4f1e2d97c51b96c4703706695ddd94f942d6b</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.66.0.beta.1/source/boost_1_66_0_b1.tar.gz">boost_1_66_0_b1.tar.gz</a></td><td>f0f455e39bc47b2b670a17cb221687506e9a22dc478956d3d8aabb9cb835a7dc</td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.66.0.beta.1/source/boost_1_66_0_b1.7z">boost_1_66_0_b1.7z</a></td><td>e7b23e638e8c3a9da1512439385b04850829cea7bd56d8398677c096857d830b</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.66.0.beta.1/source/boost_1_66_0_b1.zip">boost_1_66_0_b1.zip</a></td><td>694c8b9e902b7981670bce166f675f3875c19326936db51aabd98d2ddfea9b45</td></tr></table>
+<h3>Third Party Downloads</h3>
+<ul>
+<li><a href="https://dl.bintray.com/boostorg/beta/1.66.0.beta.1/binaries/">Windows Binaries</a></li>
+</ul>
+
               <div class="news-description">
                 <div class="description">
 
