--- a/users/history/version_1_66_0.html
+++ b/users/history/version_1_66_0.html
@@ -647,6 +647,134 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_66_0_beta1/libs/thread/">Thread</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Bugs Fixes
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/12323">#12323</a>
+                      windows - boost/thread/win32/mfc_thread_init.hpp has wrong
+                      signature for _pRawDllMainOrig
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/12730">#12730</a>
+                      windows - static threads library is incompatible with MSVC
+                      2017 RC
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/12976">#12976</a>
+                      Boost Thread Executors documentation mistakes
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/12949">#12949</a>
+                      using sleep_for in a thread context without including boost/thread/thread.hpp
+                      yields incorrect behaviour when BOOST_THREAD_HAS_CONDATTR_SET_CLOCK_MONOTONIC
+                      is defined
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/13019">#13019</a>
+                      ABI compatibility for BOOST_THREAD_PROVIDES_INTERRUPTIONS incomplete
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/13069">#13069</a>
+                      Boost unit test "sync_pq_multi_thread_p_lib.exe"
+                      hung in thread library
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/13163">#13163</a>
+                      boost::detail::heap_new does not have a variadic variant
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/13226">#13226</a>
+                      getpagesize() is deprecated since 199506L
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/132">#132</a>
+                      VS 2017.4 Preview deadlocks on Test 10964
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/133">#133</a>
+                      windows - Spurious timing test failures on windows
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/134">#134</a>
+                      VS 2017.4 Preview deadlock in sync_pq_multi_thread_p_lib.exe
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/135">#135</a>
+                      VS 2017.4 Preview test_scheduled_tp_p.exe deadlock
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/136">#136</a>
+                      VS 2017.4 Preview test_scheduler_p.exe deadlock
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/137">#137</a>
+                      VS 2017.4 Preview executor_ex.exe deadlock
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/143">#143</a>
+                      Failures on msvc-12.0
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/145">#145</a>
+                      Clang build error with BOOST_THREAD_ATTRIBUTE_MAY_ALIAS
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                New Experimental Feature
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/thread/issues/116">#116</a>
+                      [Proposal] Add APIs for deferred set_value/exception
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_66_0_beta1/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
