Add note about Visual Studio 15.5

--- a/users/history/version_1_66_0.html
+++ b/users/history/version_1_66_0.html
@@ -53,6 +53,13 @@
                 <div class="description">
 
 
+  <div id="version_1_66_0.note_about_the_new_visual_studio">
+    <h3><span class="link">Note about
+    the new Visual Studio release</span></h3>
+    <p>
+      Visual Studio 15.5 was released too late for us to test this release with it.
+    </p>
+  </div>
   <div id="version_1_66_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
