--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -120,6 +120,21 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+		<tr>
+                  <td>Boost 1.66.0 Released</td>
+
+                  <td></td>
+
+                  <td>Daniel James</td>
+
+                  <td>December 19, 2018</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/history/version_1_66_0.html">Notes</a>
+                  </td>
+                </tr>
+
                 <tr>
                   <!-- Added September 2017 -->
                   <td>Double-Ended</td>
