--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ http://www.boost.org/development/website_updating.html
                   packages. Boost may also already be available on your
                   organization's internal web server.</span></p>
 
+                  <p class="note"><span class="note-body">If you want to
+                  develop Boost, there's a <a href=
+                  "https://github.com/boostorg/boost/wiki/Getting-Started">getting
+                  started guide</a> on the wiki.</span></p>
+
                   <h3 class="note">Background</h3>
 
                   <p class="note"><span class="note-body">Read on with the
