Update link to getting started wiki page

--- a/development/bugs.html
+++ b/development/bugs.html
@@ -35,7 +35,7 @@ http://www.boost.org/development/website_updating.html
                   the bug isn't already fixed in the latest sources. The most
                   recent version of everything on the Boost web site is
                   available from the <a href=
-                  "https://svn.boost.org/trac/boost/wiki/TryModBoost" class=
+                  "https://github.com/boostorg/boost/wiki/Getting-Started" class=
                   "external">git repositories</a>.</li>
 
                   <li><a href=
