Add templates for linking to github issues/pull requests

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -91,6 +91,19 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Iterators no longer inherit from <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">iterator</span></code>,
+                as it's deprecated (<a href="https://github.com/boostorg/unordered/pull/7">PR#7</a>)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <em>TODO</em>
         </div>
       </li>
