--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -44,7 +44,12 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/master/libs/contract/">Contract</a>:</span>
+  Contract programming
+          for C++. All contract programming features are supported: Subcontracting,
+          class invariants, postconditions (with old and return values), preconditions,
+          customizable actions on assertion failure (e.g., terminate or throw), optional
+          compilation and checking of assertions, etc, from Lorenzo Caminiti.
         </div>
       </li>
     </ul>
