Add HOF to release notes

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -52,6 +52,13 @@
           compilation and checking of assertions, etc, from Lorenzo Caminiti.
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/hof/">HOF</a>:</span>
+  Higher-order functions for C++,
+          from Paul Fultz II.
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_67_0.updated_libraries">
@@ -774,11 +781,6 @@
               </div>
             </li>
           </ul>
-        </div>
-      </li>
-      <li>
-        <div>
-          <em>TODO</em>
         </div>
       </li>
     </ul>
