--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -189,6 +189,38 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/container_hash/">ContainerHash</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Extracted from the functional module to simplify the dependency diagram.
+              </div>
+            </li>
+            <li>
+              <div>
+                Moved headers to new location to reflect name change, the old include
+                paths will still work.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added support for <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">string_view</span></code>,
+                <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">error_code</span></code>, <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">error_condition</span></code>
+                <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">optional</span></code>, <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">variant</span></code>,
+                <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">monostate</span></code> where available.
+              </div>
+            </li>
+            <li>
+              <div>
+                Nore detail in the <a href="/doc/libs/master/doc/html/hash/changes.html#hash.changes.boost_1_67_0">library
+                change log</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
           <ul>
             <li>
@@ -743,8 +775,46 @@
           <ul>
             <li>
               <div>
+                Template deduction guides.
+              </div>
+            </li>
+            <li>
+              <div>
+                Standard conforming <code><span class="keyword">noexcept</span></code>
+                specifications for <code><span class="identifier">swap</span></code>,
+                <code><span class="keyword">operator</span><span class="special">=</span></code>
+                and node handles.
+              </div>
+            </li>
+            <li>
+              <div>
+                Add <code><span class="identifier">element_type</span></code>
+                to iterators, so that <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">pointer_traits</span></code>
+                will work.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">piecewise_construct</span></code> on recent Visual
+                C++ and Dinkumware libraries.
+              </div>
+            </li>
+            <li>
+              <div>
+                Use <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">iterator_traits</span></code> rather than the
+                boost iterator traits in order to remove dependency on Boost.Iterator.
+              </div>
+            </li>
+            <li>
+              <div>
                 Iterators no longer inherit from <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">iterator</span></code>,
-                as it's deprecated (<a href="https://github.com/boostorg/unordered/pull/7">PR#7</a>)
+                as it's deprecated (<a href="https://github.com/boostorg/unordered/pull/7">PR#7</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                More detail in the <a href="/doc/libs/master/doc/html/unordered/changes.html#unordered.changes.boost_1_67_0">library
+                change log</a>.
               </div>
             </li>
           </ul>
