Use proper double quotes

--- a/community/generic_programming.html
+++ b/community/generic_programming.html
@@ -480,7 +480,7 @@ void tweak_all_widgets2(int arg)
 
               <p><a name="footnote1" id="footnote1">[1]</a> Type generators
               are sometimes viewed as a workaround for the lack of
-              ``templated typedefs'' in C++.</p>
+              &ldquo;templated typedefs&rdquo; in C++.</p>
             </div>
           </div>
         </div>
