--- a/users/history/version_1_67_0.html
+++ b/users/history/version_1_67_0.html
@@ -796,7 +796,7 @@
                   </li>
                   <li>
                     <div>
-                      Fixed signed integer overflow in real parser (<a href="https://svn.boost.org/trac/boost/ticket/245">#245</a>)
+                      Fixed signed integer overflow in real parser (<a href="https://github.com/boostorg/spirit/issues/245">#245</a>)
                     </div>
                   </li>
                   <li>
@@ -1039,6 +1039,23 @@
             <li>
               <div>
                 Minor fixes (including <a href="https://github.com/boostorg/type_index/issues/17">#17</a>)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_67_0_beta1/libs/utility/">Utility</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <strong>Breaking change:</strong> <code><span class="special">&lt;</span><span class="identifier">boost</span><span class="special">/</span><span class="identifier">utility</span><span class="special">.</span><span class="identifier">hpp</span><span class="special">&gt;</span></code>
+                header no longer includes <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">next</span></code>
+                and <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">prior</span></code> as they have been moved to
+                the iterator module. Instead include <code><span class="special">&lt;</span><span class="identifier">boost</span><span class="special">/</span><span class="identifier">next_prior</span><span class="special">.</span><span class="identifier">hpp</span><span class="special">&gt;</span></code>.
+                Other uses of <code><span class="special">&lt;</span><span class="identifier">boost</span><span class="special">/</span><span class="identifier">utility</span><span class="special">.</span><span class="identifier">hpp</span><span class="special">&gt;</span></code> are discouraged, it's better
+                to use the header for the specific functionality instead.
               </div>
             </li>
           </ul>
