Fix pull request links in filesystem release notes

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -481,8 +481,8 @@
             <li>
               <div>
                 Fix static initialization issue that caused a crash if path operations
-                were used before main() ([githib_pr filesystem 62], [githib_pr filesystem
-                43], [githib_pr filesystem 50], [githib_pr filesystem 59])
+                were used before main() (<a href="https://github.com/boostorg/filesystem/pull/62">PR#62</a>, <a href="https://github.com/boostorg/filesystem/pull/43">PR#43</a>, <a href="https://github.com/boostorg/filesystem/pull/50">PR#50</a>,
+                <a href="https://github.com/boostorg/filesystem/pull/59">PR#59</a>)
               </div>
             </li>
           </ul>
