Fix download link for windows binaries

--- a/users/history/version_1_67_0.html
+++ b/users/history/version_1_67_0.html
@@ -46,7 +46,7 @@
 <tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.7z">boost_1_67_0.7z</a></td><td>1cd94f03a71334a67d36f5161b57f5931e0cd6ecf726d7aca8bd82a3be720b74</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.zip">boost_1_67_0.zip</a></td><td>7e37372d8cedd0fd6b7529e9dd67c2cb1c60e6c607aed721f5894d704945a7ec</td></tr></table>
 <h3>Third Party Downloads</h3>
 <ul>
-<li><a href="https://dl.bintray.com/boostorg/beta/1.67.0/binaries/">Windows Binaries</a></li>
+<li><a href="https://dl.bintray.com/boostorg/release/1.67.0/binaries/">Windows Binaries</a></li>
 </ul>
 
               <div class="news-description">
