--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -120,7 +120,23 @@ https://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
-                  <tr>
+		<tr>
+                  <td>Boost 1.67.0 Released</td>
+
+                  <td></td>
+
+                  <td>Daniel James</td>
+
+                  <td>April 16, 2018</td>
+
+                  <td>
+                    <a href=
+                    "https://www.boost.org/users/history/version_1_67_0.html">Notes</a>
+                  </td>
+                </tr>
+
+
+		<tr>
                     <!-- Added December 2017 -->
                     <td>YAP</td>
 		    
