Update review schedule about GIL IO released in 1.68
Related to GIL release notes in #342

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -1786,7 +1786,7 @@ https://www.boost.org/development/website_updating.html
                   <td>
                     <a href=
                     "https://lists.boost.org/boost-announce/2011/01/0281.php">Accepted
-                    -- Added to SVN</a>
+                    -- Added in 1.68.0</a>
                   </td>
                 </tr>
 
