Histogram has a new manager and review dates.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -71,9 +71,9 @@ https://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 		    
-                    <td>Klemens Morgenstern</td>
+                    <td>Mateusz Loskot</td>
 		    
-                    <td>March 12, 2018 - March 21, 2018</td>
+                    <td>September 17, 2018 - Septenber 26, 2018</td>
                   </tr>
 
 		  <!--
