--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -121,6 +121,21 @@ https://www.boost.org/development/website_updating.html
                 </thead>
 
 		<tr>
+                  <td>Boost 1.68.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>August 09, 2018</td>
+
+                  <td>
+                    <a href=
+                    "https://www.boost.org/users/history/version_1_68_0.html">Notes</a>
+                  </td>
+                </tr>
+
+		<tr>
                   <td>Boost 1.67.0 Released</td>
 
                   <td></td>
