Update bug tracker links from Trac GitHub

--- a/users/faq.html
+++ b/users/faq.html
@@ -68,11 +68,11 @@ https://www.boost.org/development/website_updating.html
 
               <ol class="faq">
                 <li>Submit patches for new features or bug fixes. Pick any
-                ticket from <a href="http://svn.boost.org/trac/boost">our bug
-                tracking system</a> and get started. If existing library
-                maintainers don't already know your work, this is a good way
-                to become known as someone they can trust to do good
-                work.</li>
+                ticket from <a href="https://github.com/boostorg/">our bug
+                tracking system</a> on GitHub and get started. If existing
+                library maintainers don't already know your work, this is
+                a good way to become known as someone they can trust to
+                do good work.</li>
 
                 <li>Become part of a particular library's community, and
                 become known to the library maintainer(s) by participating in
